RESOLVED FIXED307565
CrashTracer: com.apple.WebKit.WebContent.Development at com.apple.WebCore: WebCore::LocalFrameView::scrollToPendingTextFragmentRange
https://bugs.webkit.org/show_bug.cgi?id=307565
Summary CrashTracer: com.apple.WebKit.WebContent.Development at com.apple.WebCore: We...
Megan Gardner
Reported 2026-02-11 10:14:03 PST
CrashTracer: com.apple.WebKit.WebContent.Development at com.apple.WebCore: WebCore::LocalFrameView::scrollToPendingTextFragmentRange
Attachments
Megan Gardner
Comment 1 2026-02-11 10:14:05 PST
Megan Gardner
Comment 2 2026-02-11 10:16:18 PST
EWS
Comment 3 2026-02-11 14:48:03 PST
Committed 307309@main (bd51478378ae): <https://commits.webkit.org/307309@main> Reviewed commits have been landed. Closing PR #58417 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.