Cherry-pick 307309@main (bd51478378ae). https://bugs.webkit.org/show_bug.cgi?id=307565

CrashTracer: com.apple.WebKit.WebContent.Development at com.apple.WebCore: WebCore::LocalFrameView::scrollToPendingTextFragmentRange
    https://bugs.webkit.org/show_bug.cgi?id=307565
    rdar://170031653

    Reviewed by Aditya Keerthi.

    Speculative Fix.

    * Source/WebCore/page/LocalFrameView.cpp:
    (WebCore::LocalFrameView::scrollToPendingTextFragmentRange):

    Canonical link: https://commits.webkit.org/307309@main

Canonical link: https://commits.webkit.org/298234.442@webkitglib/2.50